# TiaoYiTiao

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/hbck/tiaoyitiao/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/hbck/tiaoyitiao/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/hbck/tiaoyitiao/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
